--- a/css/style.css
+++ b/css/style.css
@@ -886,13 +886,16 @@ Team
     }
 
 .team .thumbnail img {
-    width : 100%;
+    width : 200px;
+    height: 200px;
     }
 
 .team .thumbnail .caption {
     padding          : 15px 0;
     background-color : #f9f9f9;
     color            : #313131;
+    width: 200px;
+    display: contents;
     }
 
 .team .thumbnail h3 small {
@@ -1684,6 +1687,29 @@ service-icon-style
         display: block;
     }
 
-.intro-text p{
+.service-text{
+    padding-bottom: 40px;
+    padding-top: 20px;
+}
+
+.intro-text p, .introd-text, .service-text{
     font-size: 15px;
+}
+
+#pic-logo {
+    height: 200px; width: 250px;
+    transition: width 0.5s, height 0.5s;
+  }
+
+  @media screen and (max-width: 800px) {
+    #pic-logo{
+        width: 80px;
+        height: 50px;
+    }
+}
+  
+.main-wel-text{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
 }
