--- a/css/style.css
+++ b/css/style.css
@@ -1720,10 +1720,16 @@ service-icon-style
     transition: width 0.5s, height 0.5s;
   }
 
-  @media screen and (max-width: 800px) {
+  @media (max-width: 800px) {
     #pic-logo{
         width: 80px;
         height: 50px;
+    }
+      
+     @media (max-width: 450px) {
+    #pic-logo{
+        width: 45px;
+        height: 25px;
     }
 }
   
