--- a/css/style.css
+++ b/css/style.css
@@ -1719,11 +1719,17 @@ service-icon-style
     height: 200px; width: 250px;
     transition: width 0.5s, height 0.5s;
   }
-
+    
+ @media (max-width: 1080px) {
+    #pic-logo{
+        width: 60px;
+        height: 45px;
+    }
+     
   @media (max-width: 800px) {
     #pic-logo{
-        width: 80px;
-        height: 50px;
+        width: 70px;
+        height: 40px;
     }
       
      @media (max-width: 450px) {
