--- a/css/style.css
+++ b/css/style.css
@@ -190,8 +190,8 @@ button:focus,
     }
 
 .ptb-100 {
-    padding-top    : 100px;
-    padding-bottom : 100px;
+    padding-top    : 50px;
+    padding-bottom : 15px;
     }
 
 .ptb-150 {
@@ -367,6 +367,10 @@ Shortcode Content
     height         : 40px;
     }
 
+.navbar-brand img {
+    width:80px;
+    height:50px;
+}
 .navbar-default .navbar-nav > li {
     margin-right : 17px;
     }
@@ -940,7 +944,7 @@ Team
 
 #testimonialSlider .carousel-inner .item img {
     display       : inline-block;
-    width         : 1350px;
+    width         : 1070px;
     height        : 400px;
     border-radius : 3px;
     }
@@ -994,7 +998,6 @@ Team
     
 
     #testimonialSlider .carousel-inner .item blockquote img{
-        
             width: 1000px;        
         }
     }
@@ -1699,8 +1702,8 @@ service-icon-style
     }
 
     .ptb-100 {
-        padding-top: 100px;
-        padding-bottom: 100px;
+        padding-top: 50px;
+        padding-bottom: 15px;
     }
     article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
         display: block;
@@ -1716,19 +1719,78 @@ service-icon-style
 }
 
 #pic-logo {
-    height: 200px; width: 250px;
+    height: 200px; width: 270px;
     transition: width 0.5s, height 0.5s;
   }
 
-  @media screen and (max-width: 800px) {
+  @media (max-width: 800px) {
     #pic-logo{
         width: 80px;
         height: 50px;
     }
 }
+
   
 .main-wel-text{
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 30px;
+}
+
+/* Begining of product Style */
+#products {
+    padding: 2em;
+    padding-top: 50px;
+    margin: 1em auto;
+    background: #fff;
+    max-width: 1200px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.prod-text {
+    text-align: center;
+    padding-bottom: 10px;
+}
+.product-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2em;
+    justify-content: flex-start;
+}
+.product {
+    background: #fff;
+    padding: 1em;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    max-width: 300px;
+    text-align: center;
+}
+.product img {
+    max-width: 100%;
+    height: auto;
+}
+
+.product h3 {
+    margin: 1em 0;
+}
+.product p {
+    margin-bottom: 1em;
+}
+.product ul {
+    list-style-type: none;
+    padding: 0;
+}
+.product ul li {
+    background: #eee;
+    margin: 0.5em 0;
+    padding: 0.5em;
+}
+.prod-tile{
+    padding-top: 23px;
+}
+
+/*end of Product style*/
+
+.mini-icon{
+    height: 80px;
+    width: 75px;
 }
