--- a/css/style.css
+++ b/css/style.css
@@ -917,134 +917,61 @@ Team
 /* --------------------------------------------------
       testimonial start
 -----------------------------------------------------*/
-.testimonial .section-title h2 {
-    color : #ffffff;
-    }
+.gallery-container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
-.testimonial {
-    padding    : 100px 0px;
-    color      : #ffffff;
+.gallery {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
 
-    /* gradient: #0c0fce+0,e000e0+100 */
-    background : #0c0fce; /* Old browsers */
-    background : -moz-linear-gradient(-45deg, #0c0fce 0%, #e000e0 100%); /* FF3.6-15 */
-    background : -webkit-linear-gradient(-45deg, #0c0fce 0%, #e000e0 100%); /* Chrome10-25,Safari5.1-6 */
-    background : linear-gradient(135deg, #0c0fce 0%, #e000e0 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter     : progid:DXImageTransform.Microsoft.gradient(startColorstr='#0c0fce', endColorstr='#e000e0', GradientType=1); /* IE6-9 fallback on horizontal gradient */
+.gallery img {
+    width: 100vw;
+    ; 
+    flex-shrink: 0;
+}
+.gallery {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    width: 100%; 
+}
 
-    }
+.gallery img {
+    width: 100%;
+    height: 30%;
+    flex-shrink: 0;
+    object-fit: cover
+}
 
-.testimonial .carousel-control {
-    text-shadow : none;
-    }
 
-#testimonialSlider .carousel-inner .item {
-    text-align : center;
-    }
+button.prev, button.next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 10;
+}
 
-#testimonialSlider .carousel-inner .item img {
-    display       : inline-block;
-    width         : 1070px;
-    height        : 400px;
-    border-radius : 3px;
-    }
+button.prev {
+    left: 10px;
+}
 
-#testimonialSlider .carousel-inner .item .name {
-    text-transform : uppercase;
-    font-size      : 12px;
-    margin-top     : 5px;
-    color          : rgba(255, 255, 255, 0.5);
-    }
+button.next {
+    right: 10px;
+}
 
-#testimonialSlider .carousel-inner .item blockquote {
-    border-left : 0px;
-    }
-
-#testimonialSlider .carousel-inner .item blockquote p {
-    font-size   : 20px;
-    line-height : 34px;
-    /*padding: 0px 80px;*/
-    font-weight : 300;
-    }
-
-#testimonialSlider .carousel-inner .item blockquote ul {
-    margin : 30px 0px;
-    }
-
-#testimonialSlider .carousel-control.right,
-#testimonialSlider .carousel-control.left {
-    background  : transparent;
-    border      : 2px solid #ffffff;
-    width       : 34px;
-    height      : 34px;
-    line-height : 28px;
-    text-align  : center;
-    top         : 50%;
-    }
-
-@media (min-width : 768px) {
-    /*custom-padding class*/
-    #testimonialSlider .carousel-indicators {
-        bottom : -60px;
-        }
-   
-    }
-
-@media (min-width : 992px) and (max-width : 1199px) {
-
-    #testimonialSlider .carousel-inner .item blockquote p {
-        font-size : 18px;
-        }
-    
-
-    #testimonialSlider .carousel-inner .item blockquote img{
-            width: 1000px;        
-        }
-    }
-
-@media (min-width : 768px) and (max-width : 991px) {
-    #testimonialSlider .carousel-inner .item blockquote p {
-        font-size   : 13px;
-        line-height : 24px;
-        }
-
-        #testimonialSlider .carousel-inner .item blockquote img{
-            width: 920px;
-            height: 200px;
-        }
-    }
-
-@media only screen and (min-width : 480px) and (max-width : 767px) {
-    #testimonialSlider .carousel-inner .item blockquote p {
-        font-size     : 13px;
-        line-height   : 24px;
-        margin-bottom : 20px;
-        padding       : 0;
-        }
-
-        #testimonialSlider .carousel-inner .item blockquote img{
-            width: 600px;
-            height: 120px;
-        }
-    }
-
-@media (max-width : 766px) {
-    #testimonialSlider .carousel-control.right,
-    #testimonial-slider .carousel-control.left {
-        display : none;
-        }
-
-    #testimonialSlider .carousel-inner .item blockquote p {
-        margin-bottom : 20px;
-        padding       : 0;
-        }
-
-        #testimonialSlider .carousel-inner .item blockquote img{
-            width: 600px;
-            height: 120px;
-        }
-
-    }
+button.prev:hover, button.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
 
 /*testimonial end*/
 
@@ -1145,12 +1072,10 @@ Team
     }
 .x-progress .progress-title {
     display: inline-block;
-    float: left;
     width: 95px;
     }
 .x-progress .progress-percent {
     display: inline-block;
-    float: right;
     text-align: center;
     padding-left: 30px;
     }
@@ -1192,7 +1117,6 @@ Team
 /* --------------------------------------------------
 service-icon-style
 ------------------------------------------------- */
-
 
 /*promo-block*/
 .service-icon-style .promo-block-wrapper {
@@ -1365,16 +1289,6 @@ service-icon-style
 .tabOne .tab-pane p:last-of-type {
     margin-bottom: 0;
     }
-
-
-/* ------------------
-   Google Map
-   ------------------
-
-#googleMap{
-    height: 500px;
-    }
-*/
 
 /*------------------
   FORM STYLE
@@ -1656,11 +1570,11 @@ service-icon-style
       .marquee {
         width: 100%;
         overflow: hidden;
-        background-color: rgba(0, 0, 0, 0); /* Initial transparency */
+        background-color: rgba(0, 0, 0, 0); 
         position: fixed;
         bottom: 0;
         left: 0;
-        z-index: 1000; /* Ensure it stays on top of other content */
+        z-index: 1000; 
         transition: background-color 0.7s ease;
     }
     
@@ -1671,7 +1585,7 @@ service-icon-style
         position: fixed;
         bottom: 0;
         left: 0;
-        z-index: 1000; /* Ensure it stays on top of other content */
+        z-index: 1000; 
     }
     
 
@@ -1687,7 +1601,7 @@ service-icon-style
     }
     
     .marquee-content img {
-        height: 50px; /* Adjust the height of the logos as needed */
+        height: 50px; 
         margin: 0 10px;
     }
     
@@ -1719,8 +1633,9 @@ service-icon-style
 }
 
 #pic-logo {
-    height: 200px; width: 270px;
+    height: 200px; width: 305px;
     transition: width 0.5s, height 0.5s;
+    align-items: flex-start;
   }
 
   @media (max-width: 800px) {
@@ -1737,60 +1652,153 @@ service-icon-style
     padding-left: 30px;
 }
 
-/* Begining of product Style */
-#products {
-    padding: 2em;
-    padding-top: 50px;
-    margin: 1em auto;
-    background: #fff;
+/* Begining of Vendor Style */
+
+.vendors{
+    padding-top: 30px;
+}
+.Vendor-container {
+    width: 90%;
     max-width: 1200px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    
 }
-.prod-text {
-    text-align: center;
-    padding-bottom: 10px;
-}
-.product-container {
+
+.header {
     display: flex;
-    flex-wrap: wrap;
-    gap: 2em;
-    justify-content: flex-start;
+    justify-content: space-around;
+    padding: 10px 0;
+    color: white;
+    font-weight: bold;
 }
-.product {
-    background: #fff;
-    padding: 1em;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    max-width: 300px;
+
+.category {
+    flex: 1;
+    text-align: center;
+    padding: 10px;
+    margin: 0 5px; 
+    background-color: #0055a5;
+}
+
+
+.content {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px 0;
+    background-color: rgba(255, 255, 255, 1);
+}
+
+.column {
+    flex: 1;
     text-align: center;
 }
-.product img {
-    max-width: 100%;
-    height: auto;
+
+.img-container {
+    position: relative;
+    display: inline-block;
+    margin: 20px;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 20px;
+    border-radius: 10px;
 }
 
-.product h3 {
-    margin: 1em 0;
-}
-.product p {
-    margin-bottom: 1em;
-}
-.product ul {
-    list-style-type: none;
-    padding: 0;
-}
-.product ul li {
-    background: #eee;
-    margin: 0.5em 0;
-    padding: 0.5em;
-}
-.prod-tile{
-    padding-top: 23px;
+.img-container img {
+    display: block;
+    width: 80%;
+    height: 70%;
+    max-width: 200px;
 }
 
-/*end of Product style*/
+.overlay {
+    position: absolute;
+    bottom: 100%; 
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    background-color: rgba(0, 0, 0, 0.7); 
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    white-space: nowrap; 
+}
+
+.img-container:hover .overlay {
+    opacity: 1;
+    bottom: 110%; 
+}
+
+
+/*end of Vendor style*/
 
 .mini-icon{
     height: 80px;
     width: 75px;
 }
+
+/*---------------------------
+Popup Content
+---------------------------*/
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+  .popup-content {
+    background-color: #fff;
+    padding: 20px;
+    text-align: center;
+    border-radius: 8px;
+    position: relative;
+    height: 650px;
+    width: 650px;
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
+
+  #w-video{
+    height: 600px;
+    width: 600px;
+  }
+
+  /*end of popup content*/
+
+  .contact-us-icon {
+    position: fixed;
+    bottom: 7px; 
+    right: 20px;   
+    background-color: #007BFF;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 50%;
+    text-align: center;
+    cursor: pointer;
+    font-size: 16px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s;
+    text-decoration: none;
+  }
+
+  .contact-us-icon:hover {
+    background-color: #0056b3;
+  }
+
+  .contact-us-icon span {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+  }
