--- a/css/style.css
+++ b/css/style.css
@@ -1559,7 +1559,7 @@ Logo styles and media queries
 #pic-logo {
     height: 200px; 
     width: 305px;
-    transition: width 0.3s, height 0.3s;
+    transition: width 0.5s, height 0.5s;
     align-items: flex-start;
   }
 
@@ -1608,8 +1608,8 @@ Popup Content
     text-align: center;
     border-radius: 8px;
     position: relative;
-    height: 650px;
-    width: 850px;
+    height: 550px;
+    width: 750px;
   }
 
   .close-btn {
@@ -1620,6 +1620,47 @@ Popup Content
   }
 
   #w-video{
+    height: 600px;
+    width: 800px;
+  }
+
+  /*end of popup content*/
+
+  /*---------------------------
+Popup Content About test
+---------------------------*/
+
+.popup-overlay1 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+  .popup-content1 {
+    background-color: #fff;
+    padding: 20px;
+    text-align: center;
+    border-radius: 8px;
+    position: relative;
+    height: 550px;
+    width: 750px;
+  }
+
+  .close-btn1 {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
+
+  #w-video1{
     height: 600px;
     width: 800px;
   }
