--- a/css/style.css
+++ b/css/style.css
@@ -1036,6 +1036,7 @@ button.prev:hover, button.next:hover {
         .single-page-title h2 {
             font-size: 50px;
             font-weight : 600;
+            margin-top: 40px;
             }
         }
 
@@ -1569,8 +1570,20 @@ Logo styles and media queries
         height: 200px;
         width: 305px;
         }
-    } 
-    
+} 
+    @media (max-width : 990px){
+    #pic-logo{
+        height: 70px;
+        width: 100px;
+    }
+}
+@media (max-width : 770px){
+    #pic-logo{
+        height: 40px;
+        width: 70px;
+    }
+}
+
 /*-----end of logo style----*/
   
 .main-wel-text{
@@ -1620,52 +1633,12 @@ Popup Content
   }
 
   #w-video{
-    height: 600px;
-    width: 800px;
+    height: 500px;
+    width: 700px;
   }
 
   /*end of popup content*/
 
-  /*---------------------------
-Popup Content About test
----------------------------*/
-
-.popup-overlay1 {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-
-  .popup-content1 {
-    background-color: #fff;
-    padding: 20px;
-    text-align: center;
-    border-radius: 8px;
-    position: relative;
-    height: 550px;
-    width: 750px;
-  }
-
-  .close-btn1 {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-  }
-
-  #w-video1{
-    height: 600px;
-    width: 800px;
-  }
-
-  /*end of popup content*/
 
   /*--------------------
   COntact US ICon
