--- a/css/style.css
+++ b/css/style.css
@@ -1584,7 +1584,9 @@ Banner style
  
 @media (max-width : 550px){
     .item img{
-    height: 400px;
+        height: 550px;
+        width: 100%;
+        filter: brightness(30%);
 } 
 }
   
