--- a/css/style.css
+++ b/css/style.css
@@ -1579,13 +1579,13 @@ Banner style
  
 @media (max-width : 550px){
     .banner img{
-    height: 550px;
+    height: 100vh;
     width: 100%;
 } 
 }
   
-/*--------End of banner syle-------*/
-
+/*--------End of bann
+er syle-------*/
 /*Media queries used to cahnge line size for smaller screens*/
 @media (max-width : 550px){
     .service-line{
@@ -1643,6 +1643,19 @@ Popup Content
     width: 700px;
   }
 
+  @media (max-width: 650px) {
+    #w-video{
+        height: 300px;
+        width: 470px;
+    }
+  }
+
+  @media (max-width: 500px) {
+    #w-video{
+        height: 200px;
+        width: 350px;
+    }
+  }
   /*end of popup content*/
 
 
@@ -1920,4 +1933,40 @@ Contact Form style
     font-size: 0.9em;
     color: #666;
 }
+
+#listboxContainer {
+    display: none; /* Initially hide the listbox */
+}
+
+.searchable{
+    max-height: 60px;
+    overflow-y: auto;
+}
 /*-----End of form style-----*/
+
+/*------Mobile Product style ------*/
+.logos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    gap: 20px;
+    justify-content: center;
+    margin-top: 100px;
+    margin-left: 100px;
+}
+
+.logos img {
+    max-width: 150px;
+    height: auto;
+}
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+    .logos {
+        flex-direction: column;
+        align-items: center;
+        margin: 35px;
+    }
+    #topimage{
+        margin-top: 20px;
+    }
+}
