--- a/css/style.css
+++ b/css/style.css
@@ -661,7 +661,7 @@ Shortcode Content
 --------------------*/
 
 .hero-slide .carousel-caption {
-    bottom      : 50%;
+    bottom      : 37%;
     text-shadow : none;
     transform   : translateY(50%);
     }
@@ -701,11 +701,14 @@ Shortcode Content
     }
 
 @media (max-width : 767px) {
+    .hero-slide .carousel-caption {
+        transform   : translateY(25%);
+    }
     .hero-slide .carousel-caption p {
-        font-size: 10px;
+        font-size: 1.4rem;
     }
     .hero-slide .carousel-caption h1 {
-        font-size: 25px;
+        font-size: 2.2em;
     }
     }
     
@@ -1179,7 +1182,7 @@ service-icon-style
     }
 
 
-@media screen and (max-width:768px){
+@media screen and (max-width:992px){
     .x-accordion .panel-group{
         margin-bottom: 50px ;
         }
@@ -1537,9 +1540,9 @@ service-icon-style
     }
     #services {
         height: 500px;
-        width: 500px;
+        width: 49%;
         box-shadow: .5px .5px 12px black;
-        margin: 20px 40px;
+        /* margin: 5px 5px; */
         padding: 30px;
     
     }
@@ -1760,6 +1763,10 @@ Popup Content
         height: auto;
       }
 
+      #kes-icons{
+        height: 400px;
+      }
+
       .prod-card h2 {
         color: #3cba54;
         font-size: 1.5em;
@@ -1944,7 +1951,7 @@ Contact Form style
     padding: 10px 36px;
     font-size: 1em;
     font-weight: bold;
-    border-radius: 5px;
+    border-radius: 50px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
@@ -1989,14 +1996,87 @@ Contact Form style
     max-height: 100px;
 }
 
+@media (max-width: 820px) {
+    #kes-icons{
+        height: 410px;
+    }
+}
 @media (max-width: 768px) {
     .logo-grid {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media (max-width: 480px) {
-    .logo-grid {
-        grid-template-columns: 1fr;
+@media (max-width: 610px){
+    #services{
+        width: 100%;
+        height: 100%;
+        margin: 20px 0;
+    }
+} 
+@media (min-width: 1030px){
+    #services{
+        height: 550px;
+    }
+} 
+@media (min-width: 1255px){
+    #services{
+        height: 630px;
+    }
+} 
+
+@media (max-width: 680px){
+     #prod-Illustration {
+        width: 100%;
+        padding: 2%;
+        object-fit: contain;
+    }
+    .prod-intro {
+        width: 110%;
+        margin: 40px;
     }
 }
+
+@media (max-width: 1200px){
+    .prod-card{
+        height: 600PX;
+    }
+}
+
+@media (max-width: 835px){
+    .prod-card{
+        height: 700PX;
+    }
+}
+@media (max-width: 795px){
+    .prod-card{
+        height: 690PX;
+    }
+}
+
+@media (min-width: 611px){
+    #services-container {
+        width: 100%;
+      
+    }
+    #services{
+        margin: 20px auto;
+    }
+    #services-container .row{
+        display: flex;
+    
+    }
+}
+
+@media (min-width: 768px) {
+    .service-icon-style .container{
+        width: 100%;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-md-3 {
+        width: 50%;
+    }
+}
+
